# org-ctx

./: .gitignore  PRODUCT_PLAN.md  README.md  doc.md  environment.yml  plan.md  pyproject.toml
.claude/skills/orgcontext-inject/: SKILL.md
dummy-org/: doc.md  expected_edges.yaml
dummy-org/contracts/: __init__.py  doc.md  manifest.yaml  schemas.py
dummy-org/notifications-svc/: doc.md  manifest.yaml  worker.py
dummy-org/orders-svc/: app.py  doc.md  manifest.yaml
dummy-org/orders-svc/src/: doc.md  pay.py
dummy-org/payments-svc/: app.py  doc.md  manifest.yaml
dummy-org/scripts/: doc.md  scenario-break.sh  seed-history.sh
eval/: doc.md  harness.py  labels.yaml  metrics.py  run_eval.py
orgctx/: __init__.py  __main__.py  args.py  cli.py  compact.py  db.py  doc.md  extract.py  gitutil.py  ids.py  impact.py  ingest.py  llm.py  models.py  notes.py  policy.py  policy.yaml  render.py  sync.py
tests/: conftest.py  doc.md  test_extract.py  test_ids.py  test_scenario_a.py  test_scenario_b.py  test_scenario_c.py
